--- a/client/index.html
+++ b/client/index.html
@@ -16,7 +16,7 @@
 	</head>
 	<body>
 		<div class="container">
-			<div class="3d-cone-app">
+			<div class="cone-3d-app">
 				<section class="cone-setup">
 					<h3 class="cone-setup__header">Setup cone:</h3>
 					<div class="cone-setup-form__outer">
