--- a/client/index.html
+++ b/client/index.html
@@ -29,6 +29,7 @@
 										name="height"
 										type="number"
 										value="2"
+										step="0.1"
 									/>
 									<label class="cone-setup-form__height-label cone-setup-form__label" for="height">
 										Height
@@ -41,6 +42,7 @@
 										name="radius"
 										type="number"
 										value="1"
+										step="0.1"
 									/>
 									<label class="cone-setup-form__radius-label cone-setup-form__label" for="radius">
 										Radius
@@ -53,6 +55,7 @@
 										name="segmentsCount"
 										type="number"
 										value="6"
+										step="1"
 									/>
 									<label
 										class="cone-setup-form__segments-count-label cone-setup-form__label"
